# LocalDesk

./: .gitignore  Makefile  README.md  electron-builder.json  package-lock.json  package.json  proxy-logger.js  tsconfig.app.json  types.d.ts  vitest.config.ts
scripts/: setup_voice_server.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src/agent/: ipc-handlers.ts  main.ts  preload.cts  types.ts
src/agent/libs/: runner-openai.ts  runner.ts
src/electron/: ipc-handlers.ts  main.ts  session-manager.ts  types.ts
src/electron/libs/: llm-providers-store.ts  llm-providers.ts  prompt-loader.ts  runner-openai.ts  runner.ts  scheduler-service.ts  session-store.ts  settings-store.ts  skills-loader.ts  skills-store.ts  tools-definitions.ts  tools-executor.ts  util.ts
src/electron/libs/prompts/: system.txt
src/electron/libs/tools/: browser-tool.ts  duckduckgo-search-tool.ts  execute-js-tool.ts  extract-page-content.ts  git-tool.ts  glob-tool.ts  index.ts  install-package-tool.ts  read-tool.ts  (+3 more)
src/ui/: App.tsx  index.css  types.ts
src/ui/components/: AppFooter.tsx  ChangedFiles.tsx  ConflictResolution.tsx  DiffViewerModal.tsx  EventCard.tsx  MultiThreadPanel.tsx  MultiThreadTaskItem.tsx  PromptInput.tsx  SessionEditModal.tsx  SettingsModal.tsx  Sidebar.tsx  StartSessionModal.tsx  TaskDialog.tsx  TaskItem.tsx  ThreadTabs.tsx  TodoPanel.tsx
src/ui/platform/: tauri.ts
src/ui/render/: markdown.tsx
src/ui/store/: useAppStore.ts
tests/: changed-files.spec.tsx  diff-viewer-modal.spec.tsx  memory-tool.spec.ts  setup.ts
